--- a/src/style/Igra.css
+++ b/src/style/Igra.css
@@ -14,27 +14,32 @@
 
 #resenje{
     margin-top: 3em;
+    margin-bottom: 3em;
 }
 
 .dugmad{
+    padding: 0;
     display: flex;
-    flex-direction: row;
-    flex-basis: 15em;
     flex-wrap: wrap;
-    height: 15em;
-    border: solid 2pt black;
+    flex-direction: row;
+    flex-basis: 20em;
+    border: solid 1.5pt rgb(168, 166, 166);
     padding: 1em;
     justify-content: center;
     align-content: center;
-    margin-left: 5em;
+    margin-left: 10em;
+    height: 10em;
+    max-width: 220px;
+    min-width: 220px;
+    margin-top: 3em;
 }
 
 .rezultatPokusaja{
-    border: solid 1pt black;
+    border: solid 1pt rgb(168, 166, 166);
     background-color: rgb(252, 250, 250);
     margin-bottom: 0.5em;
     margin-top: 0.5em;
-    margin-left: 0.1em;
+    margin-left: 0.5em;
     margin-right: 0.1em;
     width: 64px;
     height: 64px;
