--- a/src/style/Polje.css
+++ b/src/style/Polje.css
@@ -1,5 +1,5 @@
 .polje{
-    border: solid 1pt black;
+    border: solid 1pt rgb(168, 166, 166);
     background-color: rgb(252, 250, 250);
     margin-bottom: 0.5em;
     margin-top: 0.5em;
