--- a/src/style/Header.css
+++ b/src/style/Header.css
@@ -8,6 +8,7 @@
     height: 5em;
     padding: 0;
     top: 0;
+    width: 100%;
     display: flex;
     flex-wrap: nowrap;
     align-items: center;
